@@ -1,3 +1,11 @@
+2003-05-24  David N. Welton  <davidw@dedasys.com>
+
+	* tests/runtests.tcl: Use apachetest::need_modules.
+
+	* tests/apachetest/apachetest.tcl (apachetest::need_modules): New
+	proc, utilized to tell the test suite which apache modules are
+	needed.
+
 2003-05-23  David N. Welton  <davidw@dedasys.com>
 
 	* src/buildscripts/aardvark.test: Do a version check on gcc.  We
